# stable-diffusion-test

./: .gitignore  README.md  pyproject.toml
api/: views.py
config/: settings.py  urls.py
static/: image.js  test.js
templates/: image_to_image.html  index.html
